kubernetes/lecture07B/my-redis-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: my-redis-pod
  labels:
    component: cache

spec:
  containers:
    - name: my-redis
      image: redis:alpine
      ports:
        - containerPort: 6379
