kubernetes/lecture07B/my-nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
    
  selector:
    compontent: web
    app: my-app
