kubernetes/lecture07B/my-ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
name: ingress-service
annotations:
kubernetes.io/ingress.class: nginx
nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
rules:
- http:
paths:
- path: /api/?(.*)
backend:
serviceName: mybackendlb-clusterip
servicePort: 5000
