kubernetes/lecture07B/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: mybackendlb-clusterip
                port: 
                  number: 5000
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: mynginx-clusterip
                port: 
                  number: 80
